# effective-golang-cookiecutter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  cookiecutter.json  pyproject.toml
.github/workflows/: python-tests.yml
docs/: configuration.md  contributing.md  hooks.md  index.md  introduction.md  license.md  structure.md  testing.md  usage.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_post_gen_project_hook.py  test_pre_gen_project_hook.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
{{cookiecutter.project_slug}}/cmd/: main.go
{{cookiecutter.project_slug}}/config/: config.go  config.yaml
{{cookiecutter.project_slug}}/docker/golang/: Dockerfile
{{cookiecutter.project_slug}}/internal/clients/: mysql_client.go  postgresql_client.go  redis_client.go
{{cookiecutter.project_slug}}/internal/handlers/: health.go
{{cookiecutter.project_slug}}/internal/logging/: logging.go
{{cookiecutter.project_slug}}/internal/routes/: health.go
{{cookiecutter.project_slug}}/internal/server/: server.go
{{cookiecutter.project_slug}}/pkg/grpc_server/: server.go
{{cookiecutter.project_slug}}/pkg/models/: .gitignore
