[project]
name = "cookiecutter-skn-golang"
version = "1.0.0"
description = "A Cookiecutter template for creating golang quickly."
readme = "README.md"
keywords = [
  "cookiecutter",
  "golang",
  "project template",
  "scaffolding",
  "skeleton",
]
license = { text = "BSD" }
authors = [
  { name = "Shayan Karimi Nafchi", email = "shayankarimi0078@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "cookiecutter==2.6.0",
  "pre-commit==4.3.0",
  "pytest==8.3.4",
]
urls = { Repository = "https://github.com/shywn-mrk/cookiecutter-skn-golang" }

[tool.black]
line-length = 119
target-version = [
  'py312',
]

[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
  "tests",
  "scripts",
  "hooks",
]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
norecursedirs = [
  ".tox",
  ".git",
  "*/migrations/*",
  "*/static/*",
  "docs",
  "venv",
  "*/{{cookiecutter.project_slug}}/*",
]

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
ignore = "H006,H030,H031,T002,T028"
ignore_blocks = "raw"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "jinja"
